copied to new repo from old one

--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -1,11 +1,21 @@
 # CSP course meta data
 Unit1:
   title: Build a Lab Notebook
-  description:  Install Tools.  Design lab notebook.  Learn GitHub Pages. Work with Pair (pair name). 
+  description:  Install Tools.  Design lab notebook.  Learn GitHub Pages. Work with Pair (Saathvik G). 
   start: 0
   end: 3
 Unit2:
   title: Learn Language
-  description: Learn (JavaScript|Python|Java).  Start Agile development process.
+  description: Learn (JavaScript|Python|Java).  Start Agile development process. Work in teams (Cayden, Ryan, Saathvik)
   start: 4
   end: 7
+Unit3:
+  title: NATM Prep
+  description: Learn API DevOPs, NATM prep, NATM, Deploy frontend backend api
+  start: 8
+  end: 12
+Unit4: 
+  title: Warm-up Data Abstraction Project, Create Performance Task (CPT) kickoff
+  description: CPT project planning and prep, pair share and teams
+  start: 13
+  end: 14
