--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: CompSci Blog
+title: CompSci Blog 2
 description: "August 2023 to June 2024"
-owner_name: Tirth Thakkar
-github_username: Tirth-Thakkar
+owner_name: nighthawkcoders
+github_username: nighthawkcoders
 github_repo: "Nighthawk-Pages"
 baseurl: "/student2.0"
 remote_theme: jekyll/minima
