--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -19,3 +19,9 @@ Unit4:
   description: CPT project planning and prep, pair share and teams
   start: 13
   end: 14
+Unit5:
+  title: CPT design and development, Computer Systems, Networks, Impact of Computing
+  description: Trimester 2 continues with CPT project design and development. Student Teaching will focus on College Board Units 4 and 5.
+  start: 15
+  end: 21
+
