--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -16,7 +16,7 @@ Unit3:
   end: 12
 Unit4: 
   title: Warm-up Data Abstraction Project, Create Performance Task (CPT) kickoff
-  description: CPT project planning and prep, pair share and teams
+  description: CPT project planning and prep, pair share and teams (Saaras, Eric, Cayden, Austin)
   start: 13
   end: 14
 Unit5:
