--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -24,4 +24,8 @@ Unit5:
   description: Trimester 2 continues with CPT project design and development. Student Teaching will focus on College Board Units 4 and 5.
   start: 15
   end: 21
-
+Unit6:
+  title: N@TM Prep and completing end of trimester MCQ
+  description: Trimeter 2 conclusion, with N@TM prep as well practice MCQ, N@TM presentations on the 15th of February.
+  start: 22
+  end: 24
