--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -39,3 +39,8 @@ Unit8:
   description: Prepare for the AP test for the AP Exam. Exam on the 13th of May.
   start: 30
   end: 32
+Unit9:
+  title: Passion Project and N@TM Weeks
+  description: Presenting accomplishments for the year by creating a passion project for N@tM. This project will serve as the year end final exam.
+  start: 33
+  end: 36
