--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -44,3 +44,8 @@ Unit9:
   description: Presenting accomplishments for the year by creating a passion project for N@tM. This project will serve as the year end final exam.
   start: 33
   end: 36
+Unit10:
+  title: Final School Week
+  description: Wrapping up the school year
+  start: 37
+  end: 37
