--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -31,7 +31,7 @@ Unit6:
   end: 24
 Unit7:
   title: Data Structures and Data Science
-  description: Begining of trimester 3, with data structures and new teams. Topics such as lists, stacks, queues.
+  description: Begining of trimester 3, with data structures and new teams (Ryan, Ankit, Tarun, Tarun, Gurshawn, Alara). Topics such as lists, stacks, queues.
   start: 25
   end: 29
 Unit8:
